slightly functioning front end

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,10 @@
-{{#each blogs }}
+{{#each blogs as |blog|}}
 <div class="card">
 <div class="card-body">
-  <a href="/blog/{{blogs.id}}">
+  <a href="/blog/{{blog.id}}">
     <div>
-      <p>Posted by <b>{{user.username}}</b> on {{format_date createdAt}}</p>
-        <h3>{{blogs.title}}</h3>
+      <p>Created by <b>{{user.username}}</b> on {{format_date createdAt}}</p>
+        <h3>{{blog.title}}</h3>
     </div>
   </a>
 </div>
