--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 <div>
-<a href="/dashboard/new"><button type="button" class="btn btn-primary btn-lg">Create a New Post</button></a>
+<a href="/dashboard/newPost"><button type="button" class="btn btn-primary btn-lg">Create a New Post</button></a>
 </div>
 
 {{#each blogs }}
