--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,10 +17,10 @@
         <header class="display-flex justify-space-between align-center p-2">
             
             <nav>
-                <!-- Conditionally render login or logout links -->
-                {{#if logged_in}}
-                <a href="/homepage">Homepage</a>
+                 <a href="/">Homepage</a>
                 <a href="/dashboard">Dashboard</a>
+                {{#if logged_in}}
+               
                 <button class="no-button" id="logout">Logout</button>
                 {{else}}
                 <a href="/login">Login</a>
@@ -32,7 +32,6 @@
             </h1>
         </header>
         <main class="container container-fluid mt-5">
-            <!-- Render the sub layout -->
             {{{ body }}}
         </main>
         <footer>
