--- a/views/viewPost.handlebars
+++ b/views/viewPost.handlebars
@@ -10,13 +10,13 @@
 {{#if logged_in}}
 <div class="card">
 <div class="card-body">
-    <form class="form newComment-form" data-id="{{id}}">
+    <form class="form"id = 'newCommentForm' data-id="{{id}}">
         <div class="mb-3 form-group">
             <label for="newComment" class="newComment-form">Comment:</label>
             <textarea class="form-input" id="newComment" rows="2" maxlength="255"></textarea>
         </div>
         <div class="form-group">
-            <button class="btn btn-primary btn-md" type="submit">Post</button>
+            <button class="btn btn-secondary" type="submit">submit</button>
         </div>
     </form>
 </div>
@@ -28,8 +28,8 @@
 {{#each comment}}
 <div class="card">
 <div class="card-body">
-    <p style="float:right;">{{format_dateAndTime createdAt}}</p>
+    <p>{{format_dateAndTime createdAt}}</p>
     <h4><b>{{user.username}}</b></h4>
-    <p>{{content}}</p>
+    <p>{{body}}</p>
 </div>
 </div>
