--- a/views/viewPost.handlebars
+++ b/views/viewPost.handlebars
@@ -1,35 +1,43 @@
+{{!-- <h1>asdfadsf</h1>
 <div class="card">
-<div class="card-body">
+    <div class="card-body">
         <h3>{{title}} <a href="/" class="exit-btn">X</a></h3>
         <p>{{content}}</p>
-        <p>Created by <b>{{user.username}}</b> on {{format_dateAndTime createdAt}}</p>
-</div>
-</div>
+        <p>Created by <b>{{user.username}}</b> on 
+        {{!-- {{format_date createdAt}} --}}
+        {{!-- </p>
+    </div>
+</div> --}} 
 
 
 {{#if logged_in}}
 <div class="card">
-<div class="card-body">
-    <form class="form"id = 'newCommentForm' data-id="{{id}}">
-        <div class="mb-3 form-group">
-            <label for="newComment" class="newComment-form">Comment:</label>
-            <textarea class="form-input" id="newComment" rows="2" maxlength="255"></textarea>
-        </div>
-        <div class="form-group">
-            <button class="btn btn-secondary" type="submit">submit</button>
-        </div>
-    </form>
-</div>
+    <div class="card-body">
+        <form class="form" id='newCommentForm' data-id="{{id}}">
+            <div class="mb-3 form-group">
+                <label for="newComment" class="newComment-form">Comment:</label>
+                <textarea class="form-input" id="newComment" rows="2" maxlength="255"></textarea>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-secondary" type="submit">submit</button>
+            </div>
+        </form>
+    </div>
 </div>
 
-    <script src="/js/comment.js"></script>
+<script src="/js/comment.js"></script>
 {{/if}}
 
-{{#each comment}}
+{{blogs.content}}
+{{#each blogs}}
 <div class="card">
-<div class="card-body">
-    <p>{{format_dateAndTime createdAt}}</p>
-    <h4><b>{{user.username}}</b></h4>
-    <p>{{body}}</p>
+    <div class="card-body">
+        {{!-- <p>{{format_date createdAt}}</p> --}}
+        {{!-- <h4><b>{{user.username}}</b></h4> --}}
+        <h1>Hello</h1>
+        <h1>{{comments.body}}</h1>
+
+        <p>{{id}}</p>
+    </div>
 </div>
-</div>
+{{/each}}
