--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -1,13 +1,13 @@
 <h2>Edit Post <a href="/dashboard" class="exit-btn">X</a></h2>
 
-<form class="form " id = 'editPostForm'data-id="{{post.id}}">
+<form class="form " id = 'editPostForm'data-id="{{blog.id}}">
 <div class="mb-3 form-group">
   <label for="editPost-title" class="editPost-form">Title:</label>
-  <textarea class="form-input" id="editPost-title" rows="1" maxlength="50">{{blogs.title}}</textarea>
+  <textarea class="form-input" id="editPost-title" rows="1" maxlength="50">{{blog.title}}</textarea>
 </div>
 <div class="mb-3 form-group">
   <label for="editPost-contents" class="editPost-form">Content:</label>
-  <textarea class="form-input" id="editPost-contents" rows="3" maxlength="255">{{blogs.content}}</textarea>
+  <textarea class="form-input" id="editPost-contents" rows="3" maxlength="255">{{blog.content}}</textarea>
 </div>
 <div class="form-group">
   <button type="submit" class="btn btn-primary btn-lg">Update</button>
